[gd_scene load_steps=5 format=3 uid="uid://bpckm0e8k2ind"]

[ext_resource type="Script" path="res://hud.gd" id="1_ihdm2"]
[ext_resource type="FontFile" uid="uid://cewpu4ecldtub" path="res://art/horror.ttf" id="1_pw4d0"]

[sub_resource type="InputEventAction" id="InputEventAction_mc0qg"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_fubxx"]
events = [SubResource("InputEventAction_mc0qg")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ihdm2")

[node name="Player1" type="Label" parent="."]
offset_left = 392.0
offset_top = 40.0
offset_right = 482.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("1_pw4d0")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2" type="Label" parent="."]
offset_left = 644.0
offset_top = 40.0
offset_right = 729.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("1_pw4d0")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
offset_left = 392.0
offset_top = 273.0
offset_right = 716.0
offset_bottom = 397.0
theme_override_fonts/font = ExtResource("1_pw4d0")
theme_override_font_sizes/font_size = 60
text = "Game over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 392.0
offset_top = 397.0
offset_right = 716.0
offset_bottom = 526.0
theme_override_fonts/font = ExtResource("1_pw4d0")
theme_override_font_sizes/font_size = 60
shortcut = SubResource("Shortcut_fubxx")
text = "   PLAY   "

[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
